# taranis-scheduler

./: .gitignore  .pre-commit-config.yaml  Containerfile  README.md  app.py  pyproject.toml  tailwind.config.js
.github/workflows/: build.yml
scheduler/: __init__.py  __main__.py  auth.py  config.py  core_api.py  jobs.py  log.py  router.py  scheduler.py
scheduler/static/css/: tailwind.css
scheduler/templates/: index.html  job_details_partial.html  jobs_partial.html
tests/: .env  conftest.py  test_api.py  test_settings.py
