[project]
name = "taranis-scheduler"
description = "Taranis AI Scheduler"
readme = "README.md"
license = { file = "LICENSE.md" }
maintainers = [{ name = "AIT", email = "benjamin.akhras@ait.ac.at" }]

classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: Flask",
    "Topic :: Security",
]
requires-python = ">=3.12"
dependencies = [
    "Flask",
    "flask-htmx",
    "apscheduler",
    "Flask-JWT-Extended",
    "SQLAlchemy",
    "psycopg2",
    "flask-cors",
    "click",
    "celery",
    "pydantic-settings",
    "python-dotenv",
    "granian",
    "requests",
    "setuptools",
]
dynamic = ["version"]

[tool.setuptools]
packages = ["scheduler"]

[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-flask", "build", "wheel", "setuptools_scm"]

[project.urls]
"Source Code" = "https://github.com/taranis-ai/taranis-scheduler"

[tool.ruff]
line-length = 142
target-version = "py312"

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.coverage.run]
branch = true

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 142
disable = """
    missing-module-docstring,
    missing-class-docstring,
    missing-function-docstring
"""

[tool.mypy]
explicit_package_bases = true
namespace-packages = true
exclude = [
    '__main__.py',
    'tests/'
]
